Fix vertical align for footer elements

--- a/pink/mobile/scss/footer.scss
+++ b/pink/mobile/scss/footer.scss
@@ -20,6 +20,7 @@
 .social__list {
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	margin-bottom: 37px;
 }
 
@@ -30,6 +31,7 @@
 .copyright {
 	display: flex;
 	justify-content: center;
+	align-items: center;
 }
 
 .copyright__text {
